Completed lessons 1 and 2.  Still working on lesson 3

--- a/lesson1/exercises/src/app/app.component.html
+++ b/lesson1/exercises/src/app/app.component.html
@@ -1,19 +1,35 @@
 <div class="container">
+  
+    <div>
+      <page-title></page-title>
+    </div>
+    <br>
     <div class="row justify-content-center">
-      <div class="col-3">
+ 
+      <div class="col-3 inset">
         <movie-list></movie-list>
       </div>
-  
-      <div class="col-3">
-        <p>No content here yet...</p>
+      <div class="col-3 inset">
+        <fav-photos></fav-photos>
       </div>
-  
-      <div class="col-3">
-        <p>No content here yet...</p>
+      <div class="col-3 inset">
+        <chores-list></chores-list>
       </div>
     </div>
+      <hr>
+      <div class="row justify-content-center">
+       <div class="col-3">
+       </div>
+        <div class="col-3">
+        <fav-links></fav-links>
+      </div>
+      <div class="col-3">
+        <footer-stuff></footer-stuff>
+      </div>
   </div>
+
+  </div>
+
+
   
-  <chores-list></chores-list>
   
-  <fav-photos></fav-photos>
