--- a/lesson2/examples/input-practice/src/app/movie-list/movie-list.component.html
+++ b/lesson2/examples/input-practice/src/app/movie-list/movie-list.component.html
@@ -4,5 +4,8 @@
        <li *ngFor ="let movie of movies">{{movie}}</li>
     </ol>
     <hr>
-
- </div>
+    <input #newMovie (keyup.enter)="addMovie(newMovie.value); newMovie.value=''" type='text' placeholder="Enter Movie Title Here"/>
+   <br>
+    <p class="error-message" *ngIf="errorMessage != ''">{{errorMessage}}</p>
+    <button (click)="addMovie(newMovie.value); newMovie.value=''">Add</button>
+   </div>
